# narcissus

./: .cz.json  .env.EXAMPLE  .eslintrc.cjs  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  astro.config.mjs  commitlint.config.cjs  generate-headers.js  generate-manifest.js  headers  package.json  pnpm-lock.yaml  snowpack.config.js  svelte.config.js  wrangler.toml
apps/narcissus-dashboard/: .env.EXAMPLE  package.json  pnpm-lock.yaml  svelte.config.js
apps/narcissus-dashboard/src/: hooks.ts
demos/narcissus-astro/: .eslintrc.js  .gitignore  astro.config.mjs  generate-astro-markdown.mjs  package.json  pnpm-lock.yaml  snowpack.config.js  tsconfig.json
demos/narcissus-astro/src/: global.d.ts
demos/narcissus-sveltekit/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
demos/narcissus-sveltekit/src/: hooks.js
services/narcissus-api/: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  wrangler.toml
services/narcissus-api/src/: akismet_client.rs  hcaptcha_client.rs  lib.rs  supabase_client.rs  telegram_client.rs
src/: global.d.ts  hooks.js  lib.rs
src/components/: Card.css.ts  Card.tsx  MessageForm.tsx  TextInputField.tsx
src/components/Icons/: Moon.tsx  Sun.tsx
src/components/Layout/: Footer.css.ts  Footer.tsx  Header.css.ts  Header.tsx  (+2 more)
src/configuration/: website.ts
src/hooks/: themeContext.tsx
src/pages/: contact.astro  contact.css.ts  index.astro
src/routes/: [slug].json.js  __layout.svelte  contact.css.ts  contact.svelte  index.css.ts  index.json.ts  index.svelte  layout.css.ts
static/: sitemap.xml
(+174 files in other folders)
