[package]
name = "narcissus"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
description = "API using PostgREST to query and update supabase database"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/narcissus"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
futures = "0.3.17"
http = "0.2.4"
worker = "0.0.6"
regex= "1"
reqwest = { version = "0.11.4", features = ["json"]}
serde = "1.0.117"
serde_json = "1.0.67"
postgrest = "1.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
